objects/ssot__EmployeeDemographicSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AgeGroup__c</fullName>
        <label>Age Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclosure Reporting Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentType__c</fullName>
        <label>Employment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Gender__c</fullName>
        <label>Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Employee Demographic Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__Region__c</fullName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportType__c</fullName>
        <label>Report Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountId__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkTypeId__c</fullName>
        <label>Work Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382300786_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmployeeDemographicSummary_WorkTypeI_rel</label>
        <referenceTo>ssot__WorkType__dlm</referenceTo>
        <relationshipLabel>EmployeeDemographicSummary_WorkTypeI_rel</relationshipLabel>
        <relationshipName>rel_1747382300786_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382301848_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmployeeDemographicSummary_DisclsRep_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>EmployeeDemographicSummary_DisclsRep_rel</relationshipLabel>
        <relationshipName>rel_1747382301848_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382305674_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmployeeDemographicSummary_Subsidiar_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>EmployeeDemographicSummary_Subsidiar_rel</relationshipLabel>
        <relationshipName>rel_1747382305674_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>